5th Rough Draft

--- a/DS4001_MidtermProject.Rmd
+++ b/DS4001_MidtermProject.Rmd
@@ -21,18 +21,19 @@ install.packages("knitr")
 install.packages("googleVis")
 library(prettydoc)
 library(tidyverse)
+library(knitr)
 library(googleVis)
 ```
 
 
 ## Package Overview
-
 ```{r GoogleVisPic, out.width= "100%", fig.align='center', fig.cap="The Google Logo"}
 knitr::include_graphics("Logo.png")
 ```
 
 The package was intended to act as an **interface between R and Google Charts**. The goal was to allow R users to take advantage and create interactive Google chart visualizations without having to upload their data to Google.
 
+### History of googleVis
 ```{r HansPic, out.width= "65%", fig.align='center', fig.cap="Hans Rosling at his TED talk"}
 knitr::include_graphics("Hans.png")
 ```
@@ -42,13 +43,14 @@ In 2006, **Hans Rosling** gave an inspiring TED talk about social and economic d
 This would popularize the idea or utilization of interactive charts. After *Gapminder* was bought by Google, the authors of the googleVis were inspired by Rosling’s talks and the desire to use interactive data visualization tools to foster the dialogue between data analysts and others. Thus, the googleVis package was born.
 
 ## Background Information
+Some background on the googleVis package: the history of the package, what it allows users to do, and its dependencies. 
 
 ### Version History
 Version history information on googleVis can be found in the [CRAN package archive](https://cran.r-project.org/src/contrib/Archive/googleVis/?C=N;O=A): 
 
-Earliest Instance: **googleVis v0.1.2** ()
+Earliest Public Instance: **googleVis v0.2.1** (12/03/2010)
 
-Most current Instance: **googleVis 0.6.6** ()
+Most Current Instance: **googleVis 0.6.6** (07/08/2020)
 
 ### Usage 
 Intended to create interactive visualizations. Visualizations are more efficiently produced than in base R. Contains non-traditional visual analysis aids such as those below:
@@ -67,8 +69,20 @@ Intended to create interactive visualizations. Visualizations are more efficient
 Requires R (>= 3.0.2)
 Requires internet connection (to connect to Google servers)
 Requires Flash Player (for Motion Charts)
-Suggested - "devtools","RJSONIO", "knitr", "shiny", "httpuv"
 
+Additionally, some R packages are suggested:
 
+1. "devtools"
+2. "RJSONIO"
+3. "knitr"
+4. "shiny"
+5. "httpuv"
 
+These complementary packages may be needed to properly run some of the visuals in googleVis.
+
+## Examples of Usage
+
+## Similar Packages
+
+## Reflection
 
